# transit2

./: .RData  .Rhistory  .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  README.md  _setup.py  anova_output.csv  anova_output.tsv  anova_output.txt  cgi_output.tsv  data  heatmap_output.tsv  normalize_output.csv  normalize_output.tsv  pyproject.toml  pytpp  pytransit  requirements.lock.txt  requirements.readthedocs.txt  requirements.txt  resampling_output.tsv  resampling_output.txt  setup.cfg  setup.py  test.sam  test.tn_stats  test.trimmed1  test.wig  test.wig.counts  test.wig.reads1  test.wig.sam  test.wig.tn_stats  test.wig.trimmed1_failed_trim  test.wig.wig  tnseq_stats.tsv  tpp.cfg  utest_output.tsv  (+1 more)
commands/: local_install  venv
commands/project/: preview_docs  run
commands/test/: all  all.ps1  anova
main/: bundle.js  data.jsx  elemental.js  elements.jsx  index.html  main.jsx  server.py
main/components/: annotation.jsx  conditions_table.jsx  file_picker.jsx  menu.jsx  parameter_panel.jsx  sample_file_area.jsx  sample_file_table.jsx  wig_loader.jsx
main/tools/: csv.js
settings/during_start/: 005_000__setup_ld_path__.sh
settings/during_start_prep/: 089_000__sw_vers_injection__.sh
settings/extensions/git/: config
settings/extensions/nix/: nix.toml  settings.toml  shell.nix
settings/requirements/: system_tools.toml
src/: fitness_defect.py  tpp.py  transit.fbp  transit.py
src/pytpp/: __main__.py  tpp_gui.py  tpp_tools.py
src/pytransit/: README.md  __dependencies__.json  __init__.py  __main__.py  all_methods.py  change_notes.md  console_tools.py  core_data.py  draw_trash.py  file_display.py  globals.py  gui_tools.py  interfaces.py  norm_tools.py  qc_display.py  stat_tools.py  tnseq_tools.py  transit_cli.py  transit_gui.py  transit_tools.py  trash.py  universal_data.py  utils.py  view_trash.py
src/pytransit/__dependencies__/: __init__.py
src/pytransit/analysis/: GI_gui.py  __init__.py  anova.py  base.py  binomial.py  corrplot.py  essentiality.py  example.py  gi.py  griffin.py  gumbel.py  heatmap.py  hmm.py  norm.py  normalize.py  pathway_enrichment.py  rankproduct.py  relative_essentiality.py  resample.py  resampling.py  resampling_new.py  test.py  test1.py  tn5gaps.py  tnseq_stats.py  tnseq_stats_gui.py  ttnfitness.py  utest.py  zinb.py
src/pytransit/basics/: command_line.py  csv.py  lazy_dict.py  misc.py  named_list.py  timing_tools.py
src/pytransit/components/: annotation.py  annotation_area.py  comwig_picker.py  conditions_area.py  draw_trash.py  file_display.py  icon.py  images.py  menu.py  panel_helpers.py  parameter_panel.py  pop_up.py  qc_display.py  results_area.py  samples_area.py  spreadsheet.py  table.py  trash.py  view_trash.py
src/pytransit/convert/: __init__.py  base.py  gff_to_prot_table.py
src/pytransit/data/: 222_samples_metadata_cg.txt  Acinetobacter_baumannii_ATCC_17978_COG_20_roles.associations.txt  COG_20_roles.txt  Dragset_metadata.txt  H37Rv_KEGG_roles.txt  KEGG_roles.txt  Mycobacterium_tuberculosis_H37Rv_COG_20_roles.associations.txt  NC_003062.2.gff3  NC_003062.2.prot_table  README.md  cog-20.org.csv  harman_randomized.metadata.tsv  iron_metadata.txt
src/pytransit/doc/: NOTES  requirements.txt
src/pytransit/export/: __init__.py  base.py  combined_wig.py  igv.py  mean_counts.py  norm.py
src/pytransit/generic_tools/: command_line.py  cool_cache.py  csv.py  informative_iterator.py  misc.py  named_list.py
src/pytransit/genomes/: H37Rv_dev.prot_table
src/pytransit/methods/: __example__.py  __init__.py  analysis_base.py  anova.documentation.rst  anova.py  cgi.py  cgi_transit1.py  combined_wig.py  convert_base.py  corrplot.documentation.rst  corrplot.py  example.py  export_base.py  fastq_to_counts.py  gene_means.documentation.rst  gene_means.py  gff_to_prot_table.py  gi.documentation.rst  gi.py  gumbel.documentation.rst  gumbel.py  heatmap.documentation.rst  heatmap.py  hmm.documentation.rst  hmm.py  hmm_conf.py  igv.py  locfdr.R  loess.py  mean_counts.py  norm.py  normalize.documentation.rst  normalize.py  pathway_enrichment.documentation.rst  pathway_enrichment.py  quality_control.py  resampling.documentation.rst  resampling.py  scatter_plot.py  scatterplot.documentation.rst  (+11 more)
src/pytransit/old_methods/: analysis_base.py  heatmap.py  tn5gaps.py  utest.py  zinb.py
src/pytransit/specific_tools/: console_tools.py  gui_tools.py  logging.py  norm_tools.py  stat_tools.py  tnseq_tools.py  transit_tools.py
src/pytransit/tools/: console_tools.py  gui_tools.py  informative_iterator.py  logging.py  norm_tools.py  stat_tools.py  tnseq_tools.py  transit_tools.py
tests/: test_analysis_methods.py  test_norm_methods.py  test_pytransit_tools.py  test_tpp.py  test_tpp_temp_1.wig  test_tpp_temp_2.wig  test_tpp_temp_c.wig  testoutput_genes.txt  transit_test.py
tests/cli_tests/_help/: 0001_basic.sh  0001_basic.sh.output  0002_abbreviation.sh  0003_option.sh  0003_option.sh.output
tests/cli_tests/_version/: 0001_basic.sh  0001_basic.sh.output  0002_abbreviation.sh  0003_option.sh
tests/cli_tests/anova/: 0001_basic.sh  0001_basic.sh.1.result  0001_basic.sh.output  0001_iron_basic.sh  0001_iron_basic.sh.1.result  0001_iron_basic.sh.output  0002_iron_normalize_flag.sh  0002_iron_normalize_flag.sh.1.result  0002_iron_normalize_flag.sh.output  0002_normalize_flag.sh  0002_normalize_flag.sh.1.result  0002_normalize_flag.sh.output  0003_alpha_arg_err1.sh  0003_alpha_arg_err1.sh.output  0003_iron_alpha_arg_err1.sh  0003_iron_alpha_arg_err1.sh.output  0004_alpha_arg_err2.sh  0004_alpha_arg_err2.sh.output  0004_iron_alpha_arg_err2.sh  0004_iron_alpha_arg_err2.sh.output  0005_alpha_arg.sh  0005_alpha_arg.sh.1.result  0005_alpha_arg.sh.output  0005_iron_alpha_arg.sh  0005_iron_alpha_arg.sh.1.result  0005_iron_alpha_arg.sh.output  0007_macrophage.sh  0007_macrophage.sh.1.result  0007_macrophage.sh.output
tests/data/: gumbel.1.output  test-multicontig.fna.amb  test-multicontig.fna.ann  test-multicontig.fna.pac  test-multicontig.fna.sa  test.wig
(+1631 files in other folders)
