[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "transit2"
authors = [
    {name="Thomas R. Ioerger", email="ioerger@cs.tamu.edu"}
]
description="TRANSIT2 is a tool for the analysis of Tn-Seq data. It provides an easy to use graphical interface and access to three different analysis methods that allow the user to determine essentiality in a single condition as well as between conditions."
readme = "README.md"
requires-python = ">=3.6,<3.12"
keywords = ["tnseq", "analysis", "biology", "genome"]
license = {text = "GNU GPL"}
classifiers=[
        "Development Status :: 5 - Production/Stable",
        "Programming Language :: Python",
        "Programming Language :: Python :: 3",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: OS Independent",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies  = [
        "numpy~=1.26",
        "setuptools",
        "wxPython",
        "attrdict~=2.0.1",
        "scipy~=1.2",
        "matplotlib~=3.0",
        "scikit-learn~=1.1.3",
        "statsmodels~=0.9",
        "pandas~=2.0.2",
        "seaborn>=0.11.2",
        "ez-yaml~=2.0.2",
        "super-hash~=1.2.8",
        "mne~=1.5.1"
    ]

dynamic = ["version"]

[project.scripts]
transit = "pytransit.__main__:run_main"
tpp = "pytpp.__main__:run_main"


[tool.setuptools]
packages = ["pytransit", "pytpp"]
py-modules = ["__init__"]
package-dir = { pytransit = "src/pytransit", pytpp = "src/pytpp" }
include-package-data = true

[tool.setuptools.package-data]
pytransit = ["*"]


[tool.setuptools.dynamic]
version = {attr = "pytransit.__version__"}
